objects/HiddenFeatures__mdt/HiddenFeatures__mdt.object-meta.xml
<CustomObject>
    <description>This is to prevent the code from running in production or sandboxes when needed</description>
    <label>HiddenFeature</label>
    <pluralLabel>HiddenFeatures</pluralLabel>
</CustomObject>