objects/HiddenFeatures__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>You can include service now ticket or brief explanation of the project</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>