objects/HiddenFeatures__mdt/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>&apos;True&apos;</defaultValue>
    <inlineHelpText>If True, the hidden feature settings for the record will be honored.
If False, the hidden feature settings for the record will NOT be honored and the code will run for all records.</inlineHelpText>
    <label>isActive</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
                <default>true</default>
                <label>True</label>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>