objects/HiddenFeatures__mdt/fields/MetadataType__c.field-meta.xml
<CustomField>
    <fullName>MetadataType__c</fullName>
    <description>Select the metadata type of the component you do not want to run</description>
    <label>Metadata Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ApexClass</fullName>
                <default>true</default>
                <label>ApexClass</label>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>