objects/HiddenFeatures__mdt/fields/SOQL__c.field-meta.xml
<CustomField>
    <fullName>SOQL__c</fullName>
    <inlineHelpText>Keep it blank if there is no SOQL you want to run.</inlineHelpText>
    <label>SOQL to run hidden feature</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>