objects/HiddenFeatures__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>MetadataType__c</columns>
    <columns>isActive__c</columns>
    <columns>Description__c</columns>
    <columns>SOQL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>