objects/HiddenFeatures__mdt/listViews/View_All.listView-meta.xml
<ListView>
    <fullName>View_All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Description__c</columns>
    <columns>isActive__c</columns>
    <columns>SOQL__c</columns>
    <columns>MetadataType__c</columns>
    <filterScope>Everything</filterScope>
    <label>View All</label>
</ListView>